--- a/public/css/courses.css
+++ b/public/css/courses.css
@@ -92,3 +92,9 @@
     background-color: #0F5DD1;
 }
 
+.course-list img{
+    width: 18vw;
+    height: 13vw;
+    border-radius: 2vw;
+    object-fit: cover;
+}
