--- a/public/css/live-search.css
+++ b/public/css/live-search.css
@@ -67,3 +67,10 @@
 .more:hover{
     background-color: #0F5DD1;
 }
+
+.courses img{
+    width: 18vw;
+    height: 13vw;
+    border-radius: 2vw;
+    object-fit: cover;
+}
